fixed footer and made the wireframe match the mockup, added menu object for webapp JS and have a for loop put a placeholder for each menu item

--- a/css/app.css
+++ b/css/app.css
@@ -6,17 +6,16 @@
   border: 1px solid;
 }
 
-.jumbo {
-  color: red;
+.footer {
+  padding: 10px;
 }
+
+/*TEST CSS*/
 
 .side {
   height: 500px;
 }
 
-.full_menu{
+.front_menu{
   height: 300px;
-}
-.footer {
-  padding: 10px;
 }
