--- a/css/app.css
+++ b/css/app.css
@@ -27,6 +27,24 @@
 
 /* MENU IMAGES */
 
-.menu_images img {
+.menu_item {
+  border-bottom: 1px solid #EBDCC4;
+  background: rgb(254,255,255); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(254,255,255,1) 82%, rgba(255,251,244,1) 99%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(82%,rgba(254,255,255,1)), color-stop(99%,rgba(255,251,244,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(254,255,255,1) 82%,rgba(255,251,244,1) 99%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(254,255,255,1) 82%,rgba(255,251,244,1) 99%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(254,255,255,1) 82%,rgba(255,251,244,1) 99%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(254,255,255,1) 82%,rgba(255,251,244,1) 99%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feffff', endColorstr='#fffbf4',GradientType=0 ); /* IE6-9 */
+
+
+
+  padding: 1em;
+}
+
+.menu_item img {
   max-width: 15em;
 }
+
+
