menu items images are positioned to the left and menu title,description, and price aligned after the image

--- a/css/app.css
+++ b/css/app.css
@@ -37,15 +37,22 @@
   background: -ms-linear-gradient(top,  rgba(254,255,255,1) 82%,rgba(255,251,244,1) 99%); /* IE10+ */
   background: linear-gradient(to bottom,  rgba(254,255,255,1) 82%,rgba(255,251,244,1) 99%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feffff', endColorstr='#fffbf4',GradientType=0 ); /* IE6-9 */
-
-
-
   padding: 1em;
 }
 
 .menu_item img {
-  max-width: 15em;
+  padding-right: 30px;
+  max-width: 270px;
+  max-height: 150px;
+  padding-top: auto;
+  padding-bottom:auto;
+
 }
+
+.group-auto-align {
+  line-height:0;
+}
+
 
 
 
