added more styling to jumbotron

--- a/css/app.css
+++ b/css/app.css
@@ -30,6 +30,7 @@
   height: 200px;
 /*  background-image: url("http://foodartist.files.wordpress.com/2010/05/6-a-portfolio-bagels2.jpg");*/
   font-family: 'Pacifico', cursive;
+  background-color: #EBDCC4;
 }
 
 .jumbo h1{
