--- a/css/app.css
+++ b/css/app.css
@@ -37,11 +37,14 @@ nav.navbar {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feffff', endColorstr='#fffbf4',GradientType=0 ); /* IE6-9 */
 }
 
-.menu_item img {
+div.menu-image{
   width: 200px;
-  
-  /*height: auto;*/
-  max-height: 100px;
+  height: 100px;
+}
+
+.menu_item img {
+  width: 100%;
+  height: auto;
   margin-right: 10px;
   margin-top: 0;
 }
