--- a/css/app.css
+++ b/css/app.css
@@ -5,10 +5,10 @@
 body {
   padding-top: 50px;
   color: white;
-  background: url("../images/bagels.jpg") no-repeat center center fixed; 
-  -webkit-background-size: cover; 
-  -moz-background-size: cover; 
-  -o-background-size: cover; 
+  background: url("../images/bagels.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   /*padding-top: 50px;*/
 }
 
@@ -130,6 +130,7 @@ h2 { font-family: 'Pacifico', cursive; }
   top: 60px;
   right: 2%;
   width: 46%;
+  padding-bottom: 100px;
 }
 
 input[type="number"] {
