--- a/partials/checkout.html
+++ b/partials/checkout.html
@@ -47,7 +47,7 @@
   </script>
 
   <div class="form-group">
-    <input type="submit" id="checkoutSubmit" value="Place Order">    
+    <input class="btn btn-primary" type="submit" id="checkoutSubmit" value="Place Order">
   </div>
 
   
